--- a/index.html
+++ b/index.html
@@ -328,10 +328,16 @@
 						</li>
 					</ul>
 					<div class="util">
-						ul>(li>a>img)*5
+						<ul>
+							<li><a href="#"><img src="images/foot_f_ico.pnt" alt="foot_f_ico"/></a></li>
+							<li><a href="#"><img src="images/foot_b_ico.pnt" alt="foot_b_ico"/></a></li>
+							<li><a href="#"><img src="images/foot_y_ico.pnt" alt="foot_y_ico"/></a></li>
+							<li><a href="#"><img src="images/foot_p_ico.pnt" alt="foot_p_ico"/></a></li>
+							<li><a href="#"><img src="images/foot_n_ico.pnt" alt="foot_n_ico"/></a></li>
+						</ul>
 					</div>
 				</div>
-				<div class="copy"></div>
+				<div class="copy">&copy; MANGOBOARD INFOGRAPHICS. ALL RIGHTS RESERVED</div>
 			</div>
 		</footer>
 	</div><!-- //#wrap -->
