--- a/index.html
+++ b/index.html
@@ -216,9 +216,37 @@
 		</section> <!-- //#template -->
 		<section id="banner">
 			<h2 class="so"></h2>
-			<div class="container1"></div>
+			<div class="container1">
+				<div class="bannerLeftBtn"><img src="images/left.png" alt="left"/></div>
+				<div class="bannerRightBtn"><img src="images/right.png" alt="right"/></div>
+				<div class="bannerArea">
+				<ul class="area">
+					<li><a href="#"><img src="images/templt_info_img01.jpg" alt="template info"/></a></li>
+					<li><a href="#"><img src="images/templt_info_img02.jpg" alt="template info"/></a></li>
+					<li><a href="#"><img src="images/templt_info_img03.jpg" alt="template info"/></a></li>
+					<li><a href="#"><img src="images/templt_info_img04.jpg" alt="template info"/></a></li>
+					<li><a href="#"><img src="images/templt_info_img05.jpg" alt="template info"/></a></li>
+					<li><a href="#"><img src="images/templt_info_img06.jpg" alt="template info"/></a></li>
+					<li><a href="#"><img src="images/templt_info_img07.jpg" alt="template info"/></a></li>
+					<li><a href="#"><img src="images/templt_info_img08.jpg" alt="template info"/></a></li>
+					<li><a href="#"><img src="images/templt_info_img09.jpg" alt="template info"/></a></li>
+					<li><a href="#"><img src="images/templt_info_img10.jpg" alt="template info"/></a></li>
+				</ul>
+			</div>
+			</div><!-- //.container1 -->
 			<div class="container2 swiper-container">
-				<div class="swiper-wrapper"></div>
+				<div class="swiper-wrapper">
+					<div class="swiper-slide"><a href="#"><img src="images/templt_info_img01.jpg" alt="template"/></a></div>
+					<div class="swiper-slide"><a href="#"><img src="images/templt_info_img02.jpg" alt="template"/></a></div>
+					<div class="swiper-slide"><a href="#"><img src="images/templt_info_img03.jpg" alt="template"/></a></div>
+					<div class="swiper-slide"><a href="#"><img src="images/templt_info_img04.jpg" alt="template"/></a></div>
+					<div class="swiper-slide"><a href="#"><img src="images/templt_info_img05.jpg" alt="template"/></a></div>
+					<div class="swiper-slide"><a href="#"><img src="images/templt_info_img06.jpg" alt="template"/></a></div>
+					<div class="swiper-slide"><a href="#"><img src="images/templt_info_img07.jpg" alt="template"/></a></div>
+					<div class="swiper-slide"><a href="#"><img src="images/templt_info_img08.jpg" alt="template"/></a></div>
+					<div class="swiper-slide"><a href="#"><img src="images/templt_info_img09.jpg" alt="template"/></a></div>
+					<div class="swiper-slide"><a href="#"><img src="images/templt_info_img10.jpg" alt="template"/></a></div>
+				</div>
 			</div>
 		</section> <!-- //#banner -->
 		<section id="title_box">
