--- a/index.html
+++ b/index.html
@@ -268,8 +268,7 @@
 				<h2><img src="images/dynamic.png" alt="mango dynamic"/></h2>
 				<h3>시선을 사로잡는 다이나믹 콘텐츠로 쉽게 만드세요.</h3>
 				<h4>클릭 몇 번만 하면, 반복해서 움직이는 콘텐츠로 변합니다.</h4>
-				<div class="dynamic_banner"></div>
-				<div class="link">
+				<div class="dynamic_banner">
 					<ul>
 						<li><div class="blog"><img src="images/d_blog.gif" alt="blog"/></div></li>
 						<li>
