--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
 					</ul>
 					<div class="util">
 						<ul>
-							<li><a href="#"><img src="images/foot_f_ico.pnt" alt="foot_f_ico"/></a></li>
-							<li><a href="#"><img src="images/foot_b_ico.pnt" alt="foot_b_ico"/></a></li>
-							<li><a href="#"><img src="images/foot_y_ico.pnt" alt="foot_y_ico"/></a></li>
-							<li><a href="#"><img src="images/foot_p_ico.pnt" alt="foot_p_ico"/></a></li>
-							<li><a href="#"><img src="images/foot_n_ico.pnt" alt="foot_n_ico"/></a></li>
+							<li><a href="#"><img src="images/foot_f_ico.png" alt="foot_f_ico"/></a></li>
+							<li><a href="#"><img src="images/foot_b_ico.png" alt="foot_b_ico"/></a></li>
+							<li><a href="#"><img src="images/foot_y_ico.png" alt="foot_y_ico"/></a></li>
+							<li><a href="#"><img src="images/foot_p_ico.png" alt="foot_p_ico"/></a></li>
+							<li><a href="#"><img src="images/foot_n_ico.png" alt="foot_n_ico"/></a></li>
 						</ul>
 					</div>
 				</div>
