mobile logo change

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 							</a>
 							<ul class="mobile_nav">
 								<li class="on"><a href="sub/sub1.html">템플릿</a></li>
-								<li><a href="sub/sub1.html">사용가이드</a></li>
-								<li><a href="sub/sub1.html">사용자갤러리</a></li>
-								<li><a href="sub/sub1.html">요금제/저작권</a></li>
+								<li><a href="sub/sub1.html">헬프센터</a></li>
+								<li><a href="sub/sub1.html">교육용</a></li>
+								<li><a href="sub/sub1.html">인쇄물 제작</a></li>
 							</ul>
 						</li>
 						<li><a href="index.html"><img src="images/logo.png" alt="login"/></a></li>
